# geese

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CODE_REVIEW_REPORT.md  EDITOR_PHYSICS_PLAN.md  README.md  build.ps1  editor_crash.txt  open_editor_subprocess.py  run_editor.py  test_desktop.py  test_launcher.py
.cargo/: config.toml
.github/workflows/: ci.yml
.qoder/repowiki/: wiki_plan.yaml
.qoder/specs/: Fix_P0_Critical_Defects_task-855.md  P1-defects-fix_task-639.md  SDSL+SDFX_着色器框架可行性探讨_e5ca90b5.md  event-component-system.md  event-component-system_task-8b3_90r.md  fix-18-critical-issues.md  navmesh-scene-integration.md  navmesh-scene-integration_task-8b3.md  修复_18_项_Critical_问题_cabae5b8.md  修复_P2_P3_级缺陷_c5e3bcea.md  动画编辑器实现_task-201.md  场景对象物理类型配置_task-89a.md  完善打包逻辑产出可执行文件_task-f97.md  实体物理组件系统_task-980.md  引擎功能差距与路线图_c975aac1.md  添加默认基础物件_task-4e7.md  (+2 more)
client/: Cargo.toml
client/engine/: __init__.py  animation_events.py  app.py  callback.py  camera.py  conn_msg_handle.py  context.py  event_system.py  player.py  scene.py  scene_object_receiver.py  subentity.py
client/engine/pyclient/: pyclient.cp312-win_amd64.pyd  pyclient.cp313-win_amd64.pyd
client/lib/client/: Cargo.toml
client/lib/client/src/: client.rs  lib.rs
client/lib/client/src/py/: aabb.rs  camera.rs  mod.rs  scene.rs  scene_object.rs  transform.rs
client/src/: lib.rs
crates/asset/: Cargo.toml
crates/asset/src/: async_loader.rs  bundle.rs  database.rs  dependency_scanner.rs  hot_reload.rs  lib.rs  mesh_cooker.rs  meta.rs  texture_cooker.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs
crates/dbproxy/: Cargo.toml
crates/dbproxy/src/: db.rs  lib.rs
crates/editor/: Cargo.toml
crates/editor/scripts/: physics_editor_server.py
crates/editor/src/: animation_panel.rs  asset_browser.rs  build_panel.rs  bundle_panel.rs  command_group.rs  commands.rs  editor.rs  editor_mode.rs  gizmo.rs  gltf_import_dialog.rs  hierarchy.rs  inspector.rs  lib.rs  local_physics.rs  material_editor.rs  panel_layer.rs  panels.rs  physics_client.rs  physics_debug.rs  physics_server.rs  play_mode.rs  shader_graph_editor.rs  viewport.rs
crates/editor/templates/: fps_camera.rs.txt  scene_builder.rs.txt  tp_camera.rs.txt
crates/game_runtime/: Cargo.toml  build.rs  run_game.py
crates/game_runtime/src/: ios.rs  lib.rs  main.rs  python_runtime.rs  script_host.rs  wasm.rs
crates/gate/: Cargo.toml
crates/gate/src/: client_msg_handle.rs  client_proxy_manager.rs  conn_manager.rs  entity_manager.rs  hub_msg_handle.rs  hub_proxy_manager.rs  lib.rs
crates/hub/: Cargo.toml
crates/hub/src/: conn_manager.rs  dbproxy_manager.rs  dbproxy_msg_handle.rs  gate_msg_handle.rs  hub_msg_handle.rs  hub_proxy_manager.rs  hub_server.rs  hub_service_manager.rs  lib.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/physics/: Cargo.toml  gen.sh
crates/physics/proto/client_call_hub/: physics.juggle
crates/physics/proto/common/: physics_common.juggle
crates/physics/proto/hub_call_client/: physics_sync.juggle
crates/physics/python/client/: physics_cli.py  physics_common_cli.py  physics_sync_cli.py
crates/physics/python/server/: physics_common_svr.py  physics_svr.py  physics_sync_svr.py
crates/physics/src/: handles.rs  joints.rs  lib.rs  math.rs  scene.rs  scene_builder.rs  shapes.rs  world.rs
crates/physics/src/py/: body.rs  mod.rs  query.rs  scene_builder.rs  shape.rs  world.rs
crates/physics/tests/: basic.rs
crates/physics_client/: Cargo.toml
crates/physics_client/src/: lib.rs
crates/physics_manager/: Cargo.toml
crates/physics_manager/src/: lib.rs  manager.rs
crates/py_engine/: Cargo.toml
crates/py_engine/src/: lib.rs
crates/redis_service/: Cargo.toml
crates/redis_service/src/: lib.rs  redis_mq_channel.rs  redis_service.rs
crates/scene/: Cargo.toml
crates/scene/src/: animation.rs  avatar_manifest.rs  capsule_controller.rs  character_animation.rs  character_physics.rs  lib.rs  loader.rs  manifest.rs  material.rs  net.rs  octree.rs  prefab_loader.rs  prefab_manifest.rs  primitives.rs  ragdoll.rs  scene.rs  scene_object.rs  script.rs
crates/scene/tests/: animation_graph_tests.rs
crates/tcp/: Cargo.toml
crates/tcp/src/: lib.rs  tcp_connect.rs  tcp_server.rs  tcp_socket.rs
crates/wss/: Cargo.toml
crates/wss/src/: lib.rs  wss_connect.rs  wss_server.rs  wss_socket.rs
desktop/: .cargo  Cargo.toml
desktop/src/: desktop_app.rs  lib.rs  native_main.rs
edit/: Cargo.toml
edit/src/: build.rs  icon.res  main.rs
projects/My/: Cargo.toml
projects/My/config/: project.toml
projects/jump_jump/: Cargo.toml  run.py
projects/jump_jump/assets/scenes/: default.scene.json
projects/jump_jump/config/: project.toml
projects/jump_jump/game/: config.py  jump_game.py
projects/jump_jump/src/: lib.rs  main.rs  scene_builder.rs
rpc/: genc2h.py  genh2c.py  genh2h.py
server/: Cargo.toml
server/engine/: __init__.py  aoi.py  app.py  base_entity.py  callback.py  conn_msg_handle.py  context.py  dbproxy.py  entity.py  get_guid.py  group.py  login.py  physics.py  physics_component.py  physics_sync.py  player.py  rank.py  save.py  scene_physics.py  service.py  subentity.py
server/engine/bson/: _cbson.cp312-win_amd64.pyd
server/engine/pyhub/: pyhub.cp312-win_amd64.pyd  pyhub.cp313-win_amd64.pyd
server/engine/sdk/: steam_sdk.py
server/engine/tests/: aoi_manager_smoke.py  aoi_smoke.py  test_physics.py
server/lib/dbproxy/: Cargo.toml
server/lib/dbproxy/src/: db.rs  handle.rs  lib.rs
server/lib/gate/: Cargo.toml
server/lib/gate/src/: client_msg_handle.rs  client_proxy_manager.rs  conn_manager.rs  entity_manager.rs  hub_msg_handle.rs  hub_proxy_manager.rs  lib.rs
server/lib/hub/: Cargo.toml
server/lib/hub/src/: aoi_py.rs  conn_manager.rs  dbproxy_manager.rs  dbproxy_msg_handle.rs  gate_msg_handle.rs  gate_proxy_manager.rs  hub_msg_handle.rs  hub_proxy_manager.rs  hub_server.rs  hub_service_manager.rs  lib.rs
server/src/: dbproxy_main.rs  gate_main.rs  hub_lib.rs  native_server.rs
(+450 files in other folders)
