[package]
name = "geese_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
thrift = "0.17.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
uuid = "1.3.3"
consulrs = "0.1.0"
tokio = { version = "1.28.2", features = ["full"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
client = { path = "../crates/client", version = "0.1.0" }

[lib]
name="pyclient"
crate-type = ["cdylib"]
