[package]
name = "geese_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
uuid = "1.3.3"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
client = { path = "./lib/client", version = "0.1.0" }

[lib]
name="pyclient"
crate-type = ["cdylib"]
