[package]
name = "pydesktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "pydesktop"
crate-type = ["cdylib"]

[[bin]]
name = "native-desktop"
path = "src/native_main.rs"
required-features = ["native-desktop"]

[dependencies]
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
egui-wgpu = "0.29"
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
launcher = { path = "../crates/launcher" }
editor = { path = "../crates/editor" }
env_logger = "0.11"

[features]
default = ["python-scripting"]
python-scripting = ["pyo3"]
native-desktop = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
