[package]
name = "geese_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
thrift = "0.17.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
opentelemetry_sdk = "0.21.1"
opentelemetry = { version = "0.21.0"}
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22.0"
uuid = "1.3.3"
consulrs = "0.1.0"
signal-hook = "0.3.17"
tokio = { version = "1.28.2", features = ["full"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
proto = { path = "../crates/proto", version = "0.1.0" }
dbproxy = { path = "../crates/dbproxy", version = "0.1.0" }
wss = { path = "../crates/wss", version = "0.1.0" }
config = { path = "../crates/config", version = "0.1.0" }
log = { path = "../crates/log", version = "0.1.0" }
health = { path = "../crates/health", version = "0.1.0" }
consul = { path = "../crates/consul", version = "0.1.0" }
local_ip = { path = "../crates/local_ip", version = "0.1.0" }
gate = { path = "../crates/gate", version = "0.1.0" }
hub = { path = "../crates/hub", version = "0.1.0" }
redis_service = { path = "../crates/redis_service", version = "0.1.0" }

[lib]
name="pyhub"
path="./src/hub_lib.rs"
crate-type = ["cdylib"]

[[bin]]
name="dbproxy"
path="./src/dbproxy_main.rs"

[[bin]]
name="gate"
path="./src/gate_main.rs"
