[package]
name = "geese_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.40"
uuid = "1.3.3"
consulrs = "0.1.0"
signal-hook = "0.3.17"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
proto = { path = "../crates/proto", version = "0.1.0" }
wss = { path = "../crates/wss", version = "0.1.0" }
config = { path = "../crates/config", version = "0.1.0" }
log = { path = "../crates/log", version = "0.1.0" }
health = { path = "../crates/health", version = "0.1.0" }
consul = { path = "../crates/consul", version = "0.1.0" }
local_ip = { path = "../crates/local_ip", version = "0.1.0" }
redis_service = { path = "../crates/redis_service", version = "0.1.0" }
dbproxy = { path = "./lib/dbproxy", version = "0.1.0" }
gate = { path = "./lib/gate", version = "0.1.0" }
hub = { path = "./lib/hub", version = "0.1.0" }

[lib]
name="pyhub"
path="./src/hub_lib.rs"
crate-type = ["cdylib"]

[[bin]]
name="dbproxy"
path="./src/dbproxy_main.rs"

[[bin]]
name="gate"
path="./src/gate_main.rs"
