[package]
name = "asset"
version = "0.1.0"
edition = "2024"

[dependencies]
gltf = {version = "1.4.1", features = ["extras", "names"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.3", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"