[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
thrift = "0.17.0"
async-trait = "0.1.68"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.20.3", features = ["extension-module"] }
net = { path = "../net", version = "0.1.0" }
wss = { path = "../wss", version = "0.1.0" }
tcp = { path = "../tcp", version = "0.1.0" }
proto = { path = "../proto", version = "0.1.0" }
queue = { path = "../queue", version = "0.1.0" }
close_handle = { path = "../close_handle", version = "0.1.0" }
