[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.29", default-features = false }
egui-wgpu = { version = "0.29", default-features = false }
cgmath = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.3", features = ["v4"] }
rfd = "0.15"
tokio = { version = "1.41.1", features = ["rt", "net", "sync", "macros"] }
gltf = {version = "1.4.1", features = ["extras", "names"]}

ui = { path = "../ui", version = "0.1.0" }
render = { path = "../render", version = "0.1.0" }
scene = { path = "../scene", version = "0.1.0" }
asset = { path = "../asset", version = "0.1.0" }
camera = { path = "../camera", version = "0.1.0" }
math = { path = "../math", version = "0.1.0" }
physics = { path = "../physics", version = "0.1.0", features = ["scene-builder"] }
physics_client = { path = "../physics_client", version = "0.1.0" }
physics_manager = { path = "../physics_manager", version = "0.1.0" }
input = { path = "../input", version = "0.1.0" }
