[package]
name = "game_runtime"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "geese_game"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = "22.1"
cgmath = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.41.1", features = ["rt", "net", "sync", "macros"] }
bytemuck = "1.16"
pollster = "0.3"

render = { path = "../render" }
scene = { path = "../scene", features = ["physics"] }
camera = { path = "../camera" }
physics_manager = { path = "../physics_manager" }
input = { path = "../input" }
asset = { path = "../asset" }
math = { path = "../math" }
avatar = { path = "../avatar" }
