[package]
name = "physics"
version = "0.1.0"
edition = "2024"

[features]
default = []
pyo3 = ["dep:pyo3"]
scene-builder = ["dep:gltf"]

[dependencies]
rapier3d = "0.32"
slotmap = "1.0"
pyo3 = { version = "0.26.0", optional = true }
gltf = { version = "1.4.1", optional = true }

[dev-dependencies]
approx = "0.5"
