[package]
name = "physics_client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
tokio = { version = "1.41.1", features = ["rt", "net", "sync", "time", "macros"] }
async-trait = "0.1"

tcp = { path = "../tcp", version = "0.1.0" }
net = { path = "../net", version = "0.1.0" }
