[package]
name = "physics_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["rt", "net", "sync", "time", "macros", "process"] }

physics = { path = "../physics", version = "0.1.0", features = ["scene-builder"] }
physics_client = { path = "../physics_client", version = "0.1.0" }
slotmap = "1.0"
