[package]
name = "redis_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
tracing = "0.1.37"
async-trait = "0.1.68"
uuid = { version = "1.3.3", features = ["v4"] }
redis = { version = "0.27.5", features = ["script"] }
tokio = { version = "1.41.1", features = ["full"] }
proto = { path = "../proto", version = "0.1.0" }
net = { path = "../net", version = "0.1.0" }
close_handle = { path = "../close_handle", version = "0.1.0" }
