[package]
name = "scene"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18"
uuid = { version = "1.3.3", features = ["v4"] }
gltf = {version = "1.4.1", features = ["extras", "names"]}
math = { path = "../math", version = "0.1.0" }
camera = { path = "../camera", version = "0.1.0" }
asset = { path = "../asset", version = "0.1.0" }
render = { path = "../render", version = "0.1.0" }
avatar = { path = "../avatar", version = "0.1.0" }
