[package]
name = "scene"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18"
log = "0.4"
uuid = { version = "1.3.3", features = ["v4"] }
gltf = {version = "1.4.1", features = ["extras", "names"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
math = { path = "../math", version = "0.1.0" }
camera = { path = "../camera", version = "0.1.0" }
asset = { path = "../asset", version = "0.1.0" }
render = { path = "../render", version = "0.1.0" }
avatar = { path = "../avatar", version = "0.1.0" }
physics = { path = "../physics", version = "0.1.0", optional = true }
gameplay_physics = { path = "../gameplay_physics", version = "0.1.0", optional = true }
navmesh = { path = "../navmesh", version = "0.1.0", optional = true }
bitflags = "2"

[features]
default = ["physics", "navmesh"]
physics = ["dep:physics", "dep:gameplay_physics"]
navmesh = ["dep:navmesh"]
