[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
async-trait = "0.1.68"
tokio = { version = "1.41.1", features = ["full"] }
queue = { path = "../queue", version = "0.1.0" }
net = { path = "../net", version = "0.1.0" }
close_handle = { path = "../close_handle", version = "0.1.0" }
