[package]
name = "My"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.29", default-features = false }
cgmath = "0.18"
wgpu = "22.1"
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
env_logger = "0.11"