[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
async-trait = "0.1.68"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
net = { path = "../../../crates/net", version = "0.1.0" }
wss = { path = "../../../crates/wss", version = "0.1.0" }
tcp = { path = "../../../crates/tcp", version = "0.1.0" }
proto = { path = "../../../crates/proto", version = "0.1.0" }
queue = { path = "../../../crates/queue", version = "0.1.0" }
close_handle = { path = "../../../crates/close_handle", version = "0.1.0" }
asset = { path = "../../../crates/asset", version = "0.1.0" }
camera = { path = "../../../crates/camera", version = "0.1.0" }
math = { path = "../../../crates/math", version = "0.1.0" }
render = { path = "../../../crates/render", version = "0.1.0" }
scene = { path = "../../../crates/scene", version = "0.1.0" }
