[package]
name = "gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
tracing = "0.1.37"
uuid = "1.3.3"
serde = "1.0.163"
rand = "0.8.5"
async-trait = "0.1.68"
tokio = { version = "1.41.1", features = ["full"] }
net = { path = "../../../crates/net", version = "0.1.0" }
redis_service = { path = "../../../crates/redis_service", version = "0.1.0" }
wss = { path = "../../../crates/wss", version = "0.1.0" }
tcp = { path = "../../../crates/tcp", version = "0.1.0" }
proto = { path = "../../../crates/proto", version = "0.1.0" }
close_handle = { path = "../../../crates/close_handle", version = "0.1.0" }
queue = { path = "../../../crates/queue", version = "0.1.0" }
time = { path = "../../../crates/time", version = "0.1.0" }
health = { path = "../../../crates/health", version = "0.1.0" }
consul = { path = "../../../crates/consul", version = "0.1.0" }