[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
thrift = "0.17.0"
tracing = "0.1.37"
rand = "0.8.5"
async-trait = "0.1.68"
serde = "1.0.163"
serde_json = "1.0.96"
uuid = "1.3.3"
consulrs = "0.1.0"
tracing-appender = "0.2.2"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
net = { path = "../../../crates/net", version = "0.1.0" }
redis_service = { path = "../../../crates/redis_service", version = "0.1.0" }
tcp = { path = "../../../crates/tcp", version = "0.1.0" }
proto = { path = "../../../crates/proto", version = "0.1.0" }
queue = { path = "../../../crates/queue", version = "0.1.0" }
config = { path = "../../../crates/config", version = "0.1.0" }
log = { path = "../../../crates/log", version = "0.1.0" }
close_handle = { path = "../../../crates/close_handle", version = "0.1.0" }
local_ip = { path = "../../../crates/local_ip", version = "0.1.0" }
time = { path = "../../../crates/time", version = "0.1.0" }
health = { path = "../../../crates/health", version = "0.1.0" }
consul = { path = "../../../crates/consul", version = "0.1.0" }
